@@ -23,7 +23,7 @@
 # IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
 # CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
 #
-# $Id: srctool,v 1.61 2006/03/07 11:24:28 mej Exp $
+# $Id: srctool,v 1.62 2006/09/26 20:13:30 mej Exp $
 #
 
 use strict;
@@ -674,7 +674,8 @@ clean_package
     $scm->scmobj_propset("saved_output", "");
     @nukem = grep(/^\?/, @output);
     push @nukem, grep(/skipping directory/, @output);
-    find({ "wanted" => sub { (($_ =~ /^\.\#/) || ($_ =~ /\~$/)) && push @nukem, $_ }, "no_chdir" => 1 }, ".");
+    find({ "wanted" => sub { ((&basename($_) =~ /^\.?\#/) || (&basename($_) =~ /\~$/)) && push @nukem, $_ },
+           "no_chdir" => 1 }, ".");
 
     if (scalar(@nukem)) {
         foreach my $item (@nukem) {
@@ -832,7 +833,7 @@ main
 
     if ($OPTION{"version"}) {
         &print_version($PROGNAME, $VERSION, "Michael Jennings <mej\@eterm.org>",
-                       'CVS Revision $Revision: 1.61 $ created on $Date: 2006/03/07 11:24:28 $ by $Author: mej $ ');
+                       'CVS Revision $Revision: 1.62 $ created on $Date: 2006/09/26 20:13:30 $ by $Author: mej $ ');
     }
     if ($OPTION{"help"}) {
         &print_usage_info();
