@@ -1,0 +1,42 @@
+%define pyver %(%{__python} -V 2>&1 | sed 's/^Python //;s/\.[0-9]*$//')
+
+Summary: @SUMMARY@
+Name: @NAME@
+Version: @VERSION@
+Release: @RELEASE@
+License: @LICENSE@
+Group: @GROUP@
+Source: @TARBALL_URL@
+Packager: @PACKAGER@
+Vendor: @VENDOR@
+Distribution: @DISTRIBUTION@
+Requires: python(abi) = %{pyver}
+BuildArch: noarch
+Prefix: %{_prefix}
+BuildRoot: %{_tmppath}/%{name}-%{version}-%{release}-root
+
+%description
+@DESCRIPTION@
+
+%prep
+%setup -q @SETUP@
+
+%build
+CFLAGS="%{?cflags:%{cflags}}%{!?cflags:$RPM_OPT_FLAGS}"
+export CFLAGS
+
+python setup.py build
+
+%install
+python setup.py install --root $RPM_BUILD_ROOT --prefix %{_prefix}
+
+%clean
+test "x$RPM_BUILD_ROOT" != "x/" && rm -rf $RPM_BUILD_ROOT
+
+%files
+%defattr(-, root, root)
+%doc @DOCFILES@
+@INSTFILES@
+
+%changelog
+@CHANGELOG@
